welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value getPos
  while (getPos()!=(6,6)) {
         ^